# MiniExperimenter

./: README.md  building-code.md  hardware-connections.md  index.md  protocol.md  thunderboard-debugger-upgrade-procedure.md
code/esp-mini-exp/: CMakeLists.txt  Makefile  sdkconfig
code/esp-mini-exp/main/: CMakeLists.txt  azure-iot-central.h  commands.c  commands.h  component.mk  maincode.c  miniexp.cpp  miniexp.h  timerfunc.c  timerfunc.h
code/esp-mini-exp/main/iotc/: parson.c
code/tbsense2/: main.cpp
